# Disnake-Docker

./: .dockerignore  .gitignore  Dockerfile  Makefile  bot.py  build  common.py  docker-compose.yaml  example.env  main.py  pyproject.toml  readme.md  requirements.txt  run  setup  shell
exts/: bad_ext.py  examples.py
src/: bot.py  main.py
src/plugins/: ping.py
